HDMI/DisplayPort audio does not work initially on boot with Linux 5.6 (Bisected)
All of the Linux 5.6 RCs have suffered from an issue where HDMI/DisplayPort audio does not work if the monitor was already plugged during boot. If the monitor is unplugged and replugged (or goes to sleep and is woken), audio then starts to work properly. During this time, no available output device is shown at all in PulseAudio. It last worked properly in the Linux 5.5.x series and works correctly at least through 5.5.7. I bisected and https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/commit/?id=58d124ea2739e1440ddd743d46c470fe724aca9a was the result. A revert of that change failed, however, and I am not knowledgeable enough with the code to manually resolve the conflicts, so I was unable to proceed farther than that.
I have encountered the problem on several systems with Skylake and Coffeelake CPUs but I haven't been able to test on any other generations (due to another bug that I still need to bisect). I will post the requested system information in the first comment.